# promprog-build-systems

task_1/: CMakeLists.txt
task_1/A/: preparing.py
task_1/B/: CMakeLists.txt  lib.c  lib.h
task_1/C/: main.c
task_2/: prepare.sh
task_3/: CMakeLists.txt
task_4/: CMakeLists.txt  code_gen.py  main.cpp  test_time.py
